<resources>
    <string name="app_name">TestApplication</string>
    <string name="Home">Home</string>
    <string name="Welcome">Welcome!</string>
    <string name="nav_main_text">Welcome! Below is menu</string>
    <string name="PersonalData">Personal Data</string>
    <string name="Dial">Dial</string>
    <string name="openPDF">Open PDF</string>
    <string name="Credit">Credit</string>
    <string name="Warning">Warning</string>
    <string name="AskClose">Do you want to exit this application?</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Setting">Setting</string>
    <string name="RegisterDataActivityTitle">Register Personnel</string>
    <string name="SearchHint">Type keyword to search</string>
    <string name="PresetPerson">You can load preset person from below.</string>
    <string name="Person1" translatable="false">Joe Snuffy</string>
    <string name="Person2" translatable="false">Paige Cooley</string>
    <string name="Person3" translatable="false">Shadow</string>
    <string name="Person4" translatable="false">홍길동</string>
    <string name="Person5" translatable="false">김영희</string>
    <string name="Person6" translatable="false">바둑이</string>
    <string name="Name">Name</string>
    <string name="NameHint">Type Name</string>
    <string name="Password">PW</string>
    <string name="PasswordHint">Type Password</string>
    <string name="Verify">Verify</string>
    <string name="Birthday">Birthday</string>
    <string name="ChooseBirthdayFirst">Please choose birthday first.</string>
    <string name="Age">Age</string>
    <string name="Sex">Sex</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="NA">N/A</string>
    <string name="Marriage">Marriage</string>
    <string name="Single">Single</string>
    <string name="Married">Married</string>
    <string name="Divorced">Divorced</string>
    <string name="Children">Children</string>
    <string name="HaveChildren">Have Children</string>
    <string name="HaveNoChildren">Have No Children</string>
    <string name="Submit">Submit</string>
    <string name="Clear">Clear</string>
    <string name="title_activity_personal_data">PersonalData</string>
    <string name="Sort">Sort</string>
    <string name="Import">Import</string>
    <string name="Export">Export</string>
    <string name="Share">Share</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Refreshed">Refreshed Successfully.</string>
    <string name="PersonAdded">Person Added Successfully.</string>
    <string name="PersonEdited">Person Edited Successfully.</string>
    <string name="PersonDeleted">Person Deleted Successfully.</string>
    <string name="Undo">Undo</string>
    <string name="Canceled">Canceled</string>
    <string name="EasterEgg">Easter Egg</string>
    <string name="PDFHint">Please type the name of PDF file.</string>
    <string name="Open">Open</string>
    <string name="NoPDFViewer">No PDF Viewer available</string>
    <string name="FileNotExist">That file does not exist.</string>
    <string name="credit1">Fennec Fox</string>
    <string name="credit2" translatable="false">깜이</string>
    <string name="switchImage">Switch</string>
    <string name="WebPage">WebPage</string>
    <string name="Email">Email</string>
    <string name="Location">Location</string>
    <string name="Call">Call</string>
    <string name="SMS">SMS</string>
    <string name="Recipient">Recipient</string>
    <string name="smsbody">Text Message</string>
    <string name="SMSReceived">SMS Received</string>
    <string name="WarnCallPermissionDenied">Cannot call without permission grant.</string>
    <string name="WarnSMSPermissionDenied">Cannot send SMS without permission grant.</string>
    <string name="WarnPermissionDenied">Cannot do action without permission grant.</string>
    <string name="GrantPermissionOnSetting">Please grant permission on settings.</string>
    <string name="SentFromTestApplication">Sent from \TestApplication\'.</string>
    <string name="AskGrantSMSPermission">Please grant permission to send message.</string>
    <string name="Request">Request</string>
    <string name="WarnRecipientEmpty">Please fill out the recipient.</string>
    <string name="WarnSMSBodyEmpty">SMS Body is empty!</string>
</resources>