<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_search_option"
    android:fitsSystemWindows="true"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/group_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/group_marriage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Sex"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chkbx_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"/>

        <CheckBox
            android:id="@+id/chkbx_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Female"/>

        <CheckBox
            android:id="@+id/chkbx_NA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/NA"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/group_marriage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/group_child"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_sex">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:text="@string/Marriage"/>

        <CheckBox
            android:id="@+id/chkbx_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Single"/>

        <CheckBox
            android:id="@+id/chkbx_married"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Married"/>

        <CheckBox
            android:id="@+id/chkbx_divorced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Divorced"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@+id/group_marriage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/Children"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/chkbx_have_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HaveChildren"
            app:layout_constrainedWidth="true"/>
        <CheckBox
            android:id="@+id/chkbx_have_no_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HaveNoChildren"
            app:layout_constrainedWidth="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>