<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:title="Add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_search"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/menu_import"
        android:title="@string/Import"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_export"
        android:title="@string/Export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_share"
        android:title="@string/Share"
        app:showAsAction="never"/>
</menu>